# api-afftrack

./: .gitignore  README.md  api-afftrack.cabal  stack.yaml
src/Afftrack/: API.hs
src/Afftrack/API/: #Common.hs#  #Offers.hs#  AdminManager.hs  Affiliate.hs  Common.hs  Merchant.hs  Offers.hs  Report.hs  Settings.hs  Types.hs
src/Afftrack/API/Affiliate/: #Affiliate.hs#  Affiliate.hs  Types.hs
src/Afftrack/API/Brand/: AdminManager.hs  Affiliate.hs  Merchant.hs  Offers.hs  Report.hs  Settings.hs
